--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-  "client:build": "vite build",
-  "postbuild": "cp dist/index.html dist/404.html || copy dist\\index.html dist\\404.html",
-  "deploy": "npm run client:build && npm run postbuild && gh-pages -d dist"
-},
-
+    "client:build": "vite build",
+    "postbuild": "cp dist/public/index.html dist/public/404.html || copy dist\\public\\index.html dist\\public\\404.html",
+    "deploy": "npm run client:build && npm run postbuild && gh-pages -d dist/public"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
